# cse-252D-project

./: .env.example  .gitignore  README.md  compute_spl.py  eval_tasks_run.txt  experiment_florence.py  experiment_florence_static.py  pipeline_diagram_v2.py  plan.txt  pyproject.toml  render_perception_overlay.py  run_baseline_vlm.py  run_navigation_pipeline.py  run_perception_smoke.py  setup_runpod_vulkan.sh  test_2.py  test_integrated_loop.py  test_view_run.py  view_run.py
act/: base.py
agents/: base.py  critic_agent.py  mapping_agent.py
agents/act/: agent.py
agents/perception/: agent.py  readme.md  run_agent.py  visual_agent (1).ipynb  visual_agent.ipynb
agents/plan/: agent.py
baseline_outputs/: metrics.txt  metrics_spl.txt
eval_scenes/: eval_tasks.txt
eval_scenes/1100/: objects.txt
eval_scenes/120/: objects.txt
eval_scenes/1800/: objects.txt
eval_scenes/280/: objects.txt
eval_scenes/42/: objects.txt
eval_scenes/450/: objects.txt
eval_scenes/5/: objects.txt
eval_scenes/720/: objects.txt
pipeline_outputs_no_critic_3/20260610_115909_navigate-to-the-television_scene5/: classes.txt  run_meta.json
pipeline_outputs_no_critic_3/20260610_120625_navigate-to-the-refrigerator_scene5/: classes.txt  run_meta.json
pipeline_outputs_no_critic_3/20260610_122551_navigate-to-the-trash-bag-on-the-floor_scene5/: classes.txt  run_meta.json
pipeline_outputs_no_critic_3/20260610_123805_navigate-to-the-plunger_scene120/: classes.txt  run_meta.json
pipeline_outputs_no_critic_3/20260610_124236_navigate-to-the-wash-basin_scene120/: run_meta.json
pipeline_outputs_no_critic_3/20260610_124830_navigate-to-the-refrigerator_scene120/: classes.txt  run_meta.json
pipeline_outputs_no_critic_3/20260610_133634_navigate-to-the-toilet-seat_scene280/: classes.txt  run_meta.json
pipeline_outputs_no_critic_3/20260610_134013_navigate-to-the-clothes-dryer_scene280/: classes.txt  run_meta.json
plan/: README.md  base.py
results/: metrics.txt
(+1841 files in other folders)
